We're now py3 only

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = SCons
-version=3.9.9a993
+;version=3.9.9a993
 license = MIT
 author = William Deegan
 author_email =bill@baddogconsulting.com
@@ -66,5 +66,6 @@ SCons.Tool.docbook = *.*
     dist-dir=build/dist
 
 [bdist_wheel]
-universal=true
+    ; We're now py3 only
+;universal=true
 dist-dir=build/dist
