--- a/doc/Makefile
+++ b/doc/Makefile
@@ -13,7 +13,7 @@ DOCTREES      = ../build/doc/api
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)"  "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile rinoh
+.PHONY: help Makefile
 
 
 # Catch-all target: route all unknown targets to Sphinx using the new
