fix scons --version and packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,8 +50,8 @@ packages = find:
 
 
 [options.packages.find]
-    include=SCons.*
-    exclude=template
+;include=SCons.*
+exclude=template
 
 [options.entry_points]
 console_scripts =
