--- a/test/CompilationDatabase/fixture/SConstruct
+++ b/test/CompilationDatabase/fixture/SConstruct
@@ -7,6 +7,7 @@ env = Environment(
     LINKFLAGS=[],
     CC='$PYTHON mygcc.py cc',
     CXX='$PYTHON mygcc.py c++',
+    CCFLAGS=ARGUMENTS.get('CCFLAGS', ''),
     tools=['gcc','g++','gnulink'],
 )
 env.Tool('compilation_db')
