scons.1 sconsign.1 scons-time.1 now make it into zip, tgz sdist and wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Environment :: Console
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
@@ -60,8 +61,14 @@ console_scripts =
 
 
 [options.package_data]
-* = *.txt, *.rst
+* = *.txt, *.rst, *.1
 SCons.Tool.docbook = *.*
+
+
+[options.data_files]
+. = build/doc/man/scons.1
+    build/doc/man/scons-time.1
+    build/doc/man/sconsign.1
 
 [sdist]
     dist-dir=build/dist
@@ -70,3 +77,4 @@ SCons.Tool.docbook = *.*
     ; We're now py3 only
 ;universal=true
 dist-dir=build/dist
+
